--- a/Kursova/Kursova.csproj
+++ b/Kursova/Kursova.csproj
@@ -69,6 +69,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EnterpriseComparer.cs" />
+    <Compile Include="RepairEnterprise.cs" />
     <Compile Include="Servises\FileIOServis.cs" />
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
@@ -100,6 +102,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
